objects/Course_Course_Catalog__c.object
<CustomObject>
    <description>Junction object to associate Courses to a certain course catalog</description>
    <fields>
        <fullName>Course_Catalog__c</fullName>
        <label>Course Catalog</label>
        <referenceTo>Course_Catalog__c</referenceTo>
        <relationshipLabel>Course/Course Catalogs</relationshipLabel>
        <relationshipName>Course_Course_Catalogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Course/Course Catalogs</relationshipLabel>
        <relationshipName>Course_Course_Catalogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <description>Unique Key for Course Course Catalog</description>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Course/Course Catalog</label>
    <nameField>
        <label>Course/Course Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course/Course Catalogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>